kubernetes/mirage-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mirage
  labels:
    name: mirage
